--- a/My Website/index.html
+++ b/My Website/index.html
@@ -14,7 +14,7 @@
     <div id="home">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top">
             <header>Marcin Filipek</header>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
