--- a/My Website/index.html
+++ b/My Website/index.html
@@ -14,7 +14,7 @@
     <div id="home">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top">
             <header>Marcin Filipek</header>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -37,6 +37,9 @@
                     <li>
                         <a href="https://www.linkedin.com/in/marcin-filipek-916083186/"><img src="img/LinkedIn.png" alt="LinkedIn Link" id="LinkedIn" /></a>
                     </li>
+					<li>
+                        <a href="https://leetcode.com/Marcin-Filipek/"><img src="img/Leetcode.png" alt="Leetcode Link" id="Leetcode" /></a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -58,9 +61,9 @@
         <div class="col-12 narrow text-center">
             <h1>About me</h1>
             <p class="lead">
-                Hello, I am Marcin Filipek, I am a Computer Science major
-                with a focus in Software Development at DePaul University. I know many languages such as,
-                Java, C++, C, and Python. I am currently a Senior and I will be graduating in June 2020.
+                Hello, I am Marcin Filipek, I have a Bachelor's degree in Computer Science 
+                with a focus in Software Development from DePaul University. I know many languages such as,
+                Java, C++, C#, C, and Python. I am currently employed as a Software Developer at PRCUA.
                 Outside of coding I really like cars, videogames, and staying fit. I've had a passion for programming
                 since high school and I am very thankful for being able to do what I love doing.
             </p>
@@ -79,15 +82,11 @@
                 <div class="col-md-4">
                     <h3> Project 1</h3>
                     <p class="firstProject">
-                        Created a program to teach kids about Computer Science terms through the use
-                        of a card game. This game is player vs computer, both players start with a health bar and
-                        randomly selected cards from the deck. Each card either attacks the opponent or heals themselves.
-                        The cards are named after Computer Science terms such as integers, strings, floats, linked lists, etc.
+                        Created a project from scratch for PRCUA, allowing the user to interface with Google's Text-to-Speech API.
+                        The application would allow users to synthesize their text into speech files and then save them. 
+                        The project was written in C# and it also connected with a Microsoft Access Database. I wrote the entire
+                        code base for the project by myself.
                     </p>
-
-                    <FORM action="https://github.com/marcinfilipek1/DemonHacks-Project-2018">
-                        <INPUT Type="submit" Value="GitHub" class="buttonStyler">
-                    </FORM>
                 </div>
                 <div class="col-md-4">
                     <h3> Project 2</h3>
@@ -109,6 +108,19 @@
                         versatile as a programmer.
                     </p>   
                     <FORM action="https://github.com/marcinfilipek1/My-Webpage">
+                        <INPUT Type="submit" Value="GitHub" class="buttonStyler">
+                    </FORM>
+                </div>
+                <div class="col-md-4">
+                    <h3> Project 4</h3>
+                    <p class="firstProject">
+                        Created a program to teach kids about Computer Science terms through the use
+                        of a card game. This game is player vs computer, both players start with a health bar and
+                        randomly selected cards from the deck. Each card either attacks the opponent or heals themselves.
+                        The cards are named after Computer Science terms such as integers, strings, floats, linked lists, etc.
+                    </p>
+
+                    <FORM action="https://github.com/marcinfilipek1/DemonHacks-Project-2018">
                         <INPUT Type="submit" Value="GitHub" class="buttonStyler">
                     </FORM>
                 </div>
