--- a/My Website/index.html
+++ b/My Website/index.html
@@ -37,9 +37,6 @@
                     <li>
                         <a href="https://www.linkedin.com/in/marcin-filipek-916083186/"><img src="img/LinkedIn.png" alt="LinkedIn Link" id="LinkedIn" /></a>
                     </li>
-					<li>
-                        <a href="https://leetcode.com/Marcin-Filipek/"><img src="img/Leetcode.png" alt="Leetcode Link" id="Leetcode" /></a>
-                    </li>
                 </ul>
             </div>
         </nav>
@@ -52,7 +49,7 @@
         </div>
     </div>
     <div class="caption text-center">
-        <h1>Welcome to Marcin Filipek's Website</h1>
+        <h1>Marcin Filipek</h1>
         <h2>Software Engineer/Developer & Programmer</h2>
     </div>
 
