--- a/My Website/index.html
+++ b/My Website/index.html
@@ -37,6 +37,9 @@
                     <li>
                         <a href="https://www.linkedin.com/in/marcin-filipek-916083186/"><img src="img/LinkedIn.png" alt="LinkedIn Link" id="LinkedIn" /></a>
                     </li>
+					<li>
+                        <a href="https://leetcode.com/Marcin-Filipek/"><img src="img/Leetcode.png" alt="Leetcode Link" id="Leetcode" /></a>
+                    </li>
                 </ul>
             </div>
         </nav>
