--- a/My Website/index.html
+++ b/My Website/index.html
@@ -63,7 +63,7 @@
             <p class="lead">
                 Hello, I am Marcin Filipek, I have a Bachelor's degree in Computer Science 
                 with a focus in Software Development from DePaul University. I know many languages such as,
-                Java, C++, C#, C, and Python. I am currently employed as a Software Developer at PRCUA.
+                Java, C++, C#, C, and Python. I am currently employed as a Software Developer at JPMorgan Chase & Co.
                 Outside of coding I really like cars, videogames, and staying fit. I've had a passion for programming
                 since high school and I am very thankful for being able to do what I love doing.
             </p>
